# disk-scope

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  forge.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  preview.html  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  tsconfig.scanner.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.preview.config.ts  vite.scanner.config.ts  vitest.config.ts
.cursor/agents/: diskscope-first-mate.md  task-003-material-shell.md  task-004-directory-picker.md  task-005-scanner-worker.md  task-006-scan-progress.md  task-007-largest-folders.md  task-008-largest-files.md  task-009-cleanup-rules.md  task-010-exclusions.md  task-011-export-report.md  task-012-packaging.md  task-013-scan-tier1-hotpath.md  task-014-scan-tier2-native.md  task-015-scan-tier3-parallel.md  task-022-auto-update.md  task-025-e2e-smoke-test.md  task-026-persist-scan-history.md
.cursor/scripts/: new-task-worktree.ps1
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  agent-fleet-playbook.md  auto-update.md  disk-scope-project-scope.md  publishing-and-release.md  resume-scan-speed-fleet.md  resume-wave2-wave3-fleet.md  tech-stack-and-ux.md
native/scanner-win/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
native/scanner-win/src/: lib.rs
scripts/: build-release-body.ps1  release-download-guide.md  release-github.ps1  scan-benchmark.ts  stage-release-assets.ps1  sync-native-binding.mjs
website/: astro.config.mjs  netlify.toml  package.json  tsconfig.json
(+261 files in other folders)
