[package]
name = "scanner-win"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.3", default-features = false, features = ["napi4"] }
napi-derive = "2.3"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[build-dependencies]
napi-build = "2.3"
